# MIO-AGH-2026

./: .gitignore  Makefile  README.md  pyproject.toml  report_template.md
reports/: report.tex
reports/assets/: class_distribution_table.tex  dataset_shape_table.tex  metrics_table.tex  padding_stats_table.tex  training_table.tex
scripts/: generate_report_assets.py
src/ecg_compression/: __init__.py  best_model.py  data.py  evaluate.py  infer.py  metrics.py  model.py  plots.py  train.py
tests/: test_best_model.py  test_data.py  test_evaluate_smoke.py  test_infer_smoke.py  test_metrics.py  test_model.py  test_training_smoke.py
